[package]
name = "leanbridgetree"
description = "Space-efficient Merkle tree designed for linear appends with witnessing of marked leaves."
version = "0.1.0"
authors = [
    "Kris Nuttycombe <kris@nutty.land>",
    "Sean Bowe <ewillbefull@gmail.com>",
    "Heliax AG <hello@heliax.dev>",
]
edition = "2024"
repository = "https://github.com/zcash/incrementalmerkletree"
homepage = "https://github.com/zcash/incrementalmerkletree"
license = "MIT OR Apache-2.0"
categories = ["algorithms", "data-structures"]

[features]
std = []
test-dependencies = ["proptest", "incrementalmerkletree/test-dependencies"]

[dependencies]
incrementalmerkletree = { version = "0.8", default-features = false }
proptest = { version = "1", optional = true }

[dev-dependencies]
incrementalmerkletree-testing = "=0.2.0-backcompat.0.8"
proptest = "1"
