[package]
name = "leanbridgetree"
description = "Space-efficient Merkle tree designed for linear appends with witnessing of marked leaves."
version = "0.3.0"
authors = [
    "Kris Nuttycombe <kris@nutty.land>",
    "Sean Bowe <ewillbefull@gmail.com>",
    "Heliax AG <hello@heliax.dev>",
]
edition = "2024"
repository = "https://github.com/namada-net/leanbridgetree"
homepage = "https://github.com/namada-net/leanbridgetree"
license = "MIT OR Apache-2.0"
categories = ["algorithms", "data-structures"]

[features]
default = ["std", "display-error"]
borsh = ["dep:borsh"]
std = ["thiserror/std", "slab/std", "borsh/std"]
display-error = ["dep:thiserror"]
test-dependencies = ["proptest", "incrementalmerkletree/test-dependencies"]

[dependencies]
borsh = { version = "1.5.7", default-features = false, optional = true }
incrementalmerkletree = { version = "0.8", default-features = false }
proptest = { version = "1", optional = true }
slab = { version = "0.4.10", default-features = false }
thiserror = { version = "2.0.12", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
bridgetree = "0.7.0"
incrementalmerkletree-testing = "=0.2.0-backcompat.0.8"
proptest = "1"

[[bench]]
name = "leanbridgetree"
harness = false
